Synced query params within filtering table data

--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -13,12 +13,12 @@
                 </a>
             </li>
             <li>
-                <a routerLink="/order-list" class="text-white hover:text-[#22C55E] transition-colors duration-200 text-sm font-medium">
+                <a routerLink="/purchase-orders/order-list" class="text-white hover:text-[#22C55E] transition-colors duration-200 text-sm font-medium">
                     Order List
                 </a>
             </li>
             <li>
-                <a routerLink="/add-order" class="text-white hover:text-[#22C55E] transition-colors duration-200 text-sm font-medium">
+                <a routerLink="/purchase-orders/add-order" class="text-white hover:text-[#22C55E] transition-colors duration-200 text-sm font-medium">
                     Add Order
                 </a>
             </li>
