--- a/src/app/purchase-order/purchase-order-list/purchase-order-list.html
+++ b/src/app/purchase-order/purchase-order-list/purchase-order-list.html
@@ -53,6 +53,7 @@
         <!-- Create Button -->
         <div class="min-w-[180px]">
           <button
+            routerLink="/purchase-orders/add-order"
             class="w-full bg-[#22C55E] hover:bg-[#16A34A] text-white font-medium px-6 py-2 rounded-md transition-colors duration-200 shadow-md hover:shadow-lg"
           >
             + Create Purchase Order
@@ -120,6 +121,7 @@
                 <button class="text-[#22C55E] hover:text-[#16A34A]" title="View">View</button>
                 <span class="text-gray-300">|</span>
                 <button
+                  type="submit"
                   (click)="onEdit(order.id)"
                   class="text-[#22C55E] hover:text-[#16A34A]"
                   title="Edit"
@@ -148,16 +150,14 @@
       </table>
     </div>
 
-    <div class="px-6 py-4 bg-gray-50 border-t border-gray-200 rounded-b-lg flex justify-end">
-      <pagination
-        [totalItems]="(totalCount$ | async) || 0"
-        [itemsPerPage]="10"
-        [maxSize]="5"
-        [boundaryLinks]="true"
-        [rotate]="true"
-        [(ngModel)]="currentPage"
-        (pageChanged)="onPageChange($event)"
-      ></pagination>
-    </div>
+    <pagination
+      [totalItems]="(totalCount$ | async) || 0"
+      [itemsPerPage]="10"
+      [maxSize]="5"
+      [boundaryLinks]="true"
+      [rotate]="true"
+      [(ngModel)]="currentPage"
+      (pageChanged)="onPageChange($event)"
+    ></pagination>
   </div>
 </div>
